--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-
+  excel: ^4.0.3
+  file_picker: ^8.0.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
