--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   cupertino_icons: ^1.0.6
   excel: ^4.0.3
   file_picker: ^8.0.3
+  url_launcher: ^6.1.14
+  connectivity_plus: ^6.0.4
 dev_dependencies:
   flutter_test:
     sdk: flutter
