--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   file_picker: ^8.0.3
   url_launcher: ^6.1.14
   connectivity_plus: ^6.0.4
+  hex: ^0.2.0
+  shared_preferences: ^2.2.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
